# fred

./: README.md  datasets.ipynb  main.py  pyproject.toml
datasets/: fred_ASPUS.json  fred_CPIAUCSL.json  fred_CSUSHPINSA.json  fred_EMELASA.json  fred_EMEQASA.json  fred_FEDFUNDS.json  fred_GDP.json  fred_GDPC1.json  fred_KCPRU.json  fred_M2SL.json  fred_M2V.json  fred_MORTGAGE15US.json  fred_MORTGAGE30US.json  fred_MSPUS.json  fred_PCE.json  fred_PPIACO.json  fred_RCCCBBALTOT.json  fred_RCCCBPURCHASETOT.json  fred_RCCCOORG.json  fred_RCMFLOACT.json  fred_RCMFLOORIG.json  fred_SP500.json  fred_UNRATE.json  fred_USREC.json
